--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "selectors",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://http://alinsalaru.github.io/",
+  "homepage" : "https://alinsalaru.github.io/selector-workshop",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
